--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^8.0.2",
     "iron-session": "^6.3.1",
     "next": "13.1.1",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
