--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "siwe": "^1.1.6",
+    "use-debounce": "^9.0.3",
     "usehooks-ts": "^2.9.1",
     "wagmi": "^0.10.0"
   },
