--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "extends": "@tsconfig/next/tsconfig.json",
   "compilerOptions": {
+    "target": "es6",
     "baseUrl": "./src"
   },
   "ts-node": {
     "require": ["tsconfig-paths/register"]
   },
-  "include": ["./src"],
+  "include": ["next-env.d.ts", "src"],
   "exclude": ["node_modules"]
 }
