--- a/contracts/package.json
+++ b/contracts/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "hardhat compile",
     "deploy": "npx hardhat run scripts/deploy.ts",
+    "deploy:nft": "npx hardhat run scripts/nft.ts",
     "coverage": "hardhat coverage",
     "test": "REPORT_GAS=true hardhat test"
   },
@@ -16,6 +17,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@openzeppelin/contracts": "^4.8.2",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.0",
