--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@next/font": "13.1.1",
-    "connectkit": "^1.1.1",
+    "@web3modal/ethereum": "^2.4.1",
+    "@web3modal/react": "^2.4.1",
     "dayjs": "^1.11.7",
-    "ethers": "^5.7.2",
     "framer-motion": "^8.0.2",
     "iron-session": "^6.3.1",
     "next": "13.1.1",
@@ -39,7 +39,8 @@
     "react-icons": "^4.7.1",
     "siwe": "^1.1.6",
     "usehooks-ts": "^2.9.1",
-    "wagmi": "^0.12.12"
+    "viem": "^0.3.22",
+    "wagmi": "^1.0.0-next.9"
   },
   "devDependencies": {
     "@tsconfig/next": "^1.0.4",
