--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "react-icons": "^4.7.1",
     "siwe": "^1.1.6",
     "usehooks-ts": "^2.9.1",
-    "viem": "^0.3.22",
-    "wagmi": "^1.0.0-next.9"
+    "viem": "^1.10.14",
+    "wagmi": "^1.4.1"
   },
   "devDependencies": {
     "@tsconfig/next": "^1.0.4",
