--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@next/font": "13.1.1",
-    "@web3modal/ethereum": "^2.4.1",
-    "@web3modal/react": "^2.4.1",
+    "@web3modal/wagmi": "^3.0.2",
     "dayjs": "^1.11.7",
     "framer-motion": "^8.0.2",
     "iron-session": "^6.3.1",
