--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "react-icons": "^4.7.1",
     "siwe": "^1.1.6",
     "usehooks-ts": "^2.9.1",
-    "viem": "^1.10.14",
-    "wagmi": "^1.4.1"
+    "viem": "^1.12.2",
+    "wagmi": "^1.4.2"
   },
   "devDependencies": {
     "@tsconfig/next": "^1.0.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@wagmi/cli": "^0.1.11",
+    "@wagmi/cli": "^1.5.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.5.0",
@@ -54,6 +54,6 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
-    "typescript": "4.9.4"
+    "typescript": "^5.2.2"
   }
 }
