--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@next/font": "13.1.1",
     "@web3modal/wagmi": "^3.0.2",
     "dayjs": "^1.11.7",
+    "ethers": "^6.7.1",
     "framer-motion": "^8.0.2",
     "iron-session": "^6.3.1",
     "next": "13.1.1",
@@ -36,7 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "siwe": "^1.1.6",
+    "siwe": "^2.1.4",
     "usehooks-ts": "^2.9.1",
     "viem": "^1.12.2",
     "wagmi": "^1.4.2"
