--- a/packages/app/.gitignore
+++ b/packages/app/.gitignore
@@ -23,10 +23,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env
 .env*.local
 
 # vercel
@@ -37,19 +35,19 @@ yarn-error.log*
 next-env.d.ts
 
 # hardhat
-**/contracts/node_modules
-**/contracts/.env
-**/contracts/coverage
-**/contracts/coverage.json
-**/contracts/typechain
-**/contracts/typechain-types
+contracts/node_modules
+contracts/.env
+contracts/coverage
+contracts/coverage.json
+contracts/typechain
+contracts/typechain-types
 
-**/contracts/cache
-**/contracts/artifacts
+contracts/cache
+contracts/artifacts
 
 # wagmi recommends to ignore their generated file
 # /src/abis.ts 
 
 # subgraph
-**/subgraph/node_modules
-**/subgraph/build
+subgraph/node_modules
+subgraph/build
