--- a/package.json
+++ b/package.json
@@ -1,60 +1,16 @@
 {
   "name": "nexth",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint --fix",
-    "prettier": "prettier './src' --write",
-    "wagmi": "wagmi generate"
+    "dev": "yarn workspaces -pt run dev",
+    "build": "yarn workspaces -pt run build",
+    "test": "yarn workspaces -pt run test"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "./src": [
-      "lint",
-      "prettier"
-    ]
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "2.0.14",
-    "@chakra-ui/react": "2.4.4",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@next/font": "13.1.1",
-    "@web3modal/wagmi": "^3.0.2",
-    "dayjs": "^1.11.7",
-    "ethers": "^6.7.1",
-    "framer-motion": "^8.0.2",
-    "iron-session": "^6.3.1",
-    "next": "13.1.1",
-    "next-seo": "^5.15.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "siwe": "^2.1.4",
-    "usehooks-ts": "^2.9.1",
-    "viem": "^1.12.2",
-    "wagmi": "^1.4.2"
-  },
-  "devDependencies": {
-    "@tsconfig/next": "^1.0.4",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@wagmi/cli": "^1.5.2",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.1",
-    "typescript": "^5.2.2"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
