--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -24,6 +24,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/mocha": ">=9.1.0",
     "@types/node": ">=12.0.0",
+    "hardhat-preprocessor": "^0.1.4",
     "chai": "^4.2.0",
     "dotenv": "^16.3.1",
     "ethers": "5.7.2",
