--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
     "siwe": "^2.1.4",
     "viem": "^1.15.3",
     "wagmi": "^1.4.3"
