--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexth",
+  "name": "app",
   "version": "0.2.0",
   "license": "MIT",
   "scripts": {
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@tanstack/react-query": "^5.17.15",
-    "@web3modal/wagmi": "4.0.0-alpha.0",
+    "@tanstack/react-query": "^5.18.1",
+    "@web3modal/wagmi": "^4.0.0",
     "dayjs": "^1.11.10",
     "iron-session": "^6.3.1",
     "next": "13.5.4",
@@ -34,8 +34,8 @@
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
     "siwe": "^2.1.4",
-    "viem": "^2.4.0",
-    "wagmi": "^2.3.1"
+    "viem": "^2.7.6",
+    "wagmi": "^2.5.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
